--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -10,6 +10,7 @@
     <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path %></li>
     <li><%= link_to 'Sonatype Nexus'     , settings_nexussettings_path %></li>
     <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
+    <li><%= link_to 'Connect'            , settings_connect_path %></li>
     <li><%= link_to 'Password'           , settings_password_path %></li>
   <% else %>
     <li><%= link_to 'Profile'            , settings_profile_path %></li>
