Assets precompile new

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,24 +5,22 @@
  *
 */
 
-
 $gradient_start: #7F0200;
 $gradient_end: #610003;
 $link_color: #7575FF;
-/*
-$text_yellow: #FBB21C;
-*/
+
+/* $text_yellow: #FBB21C; */
+
 $text_yellow: gray;
 $text_casual: #616970;
 
-$link_hover: #FBB21C;
-$link_color: #FDFDFD;
+$link_hover:   #FBB21C;
+$link_color:   #FDFDFD;
 $link_visited: #FDFDFD;
 
-$text_link: #669acb;
+$text_link:  #669acb;
 $text_hover: #a0b8cf;
 
-@import "bourbon";
 @import "bootstrap";
 @import "bootstrap_responsive";
 @import "bootstrap_switch";
