--- a/app/assets/stylesheets/application_lp.css.scss
+++ b/app/assets/stylesheets/application_lp.css.scss
@@ -25,8 +25,8 @@ $text_hover: #a0b8cf;
 @import "bootstrap_responsive";
 @import "bootstrap_upload";
 @import "font-awesome";
-@import "sprite.css.scss";
-@import "colorschema.css.scss";
+@import "sprite";
+@import "colorschema";
 
 @import "base";
 @import "well";
