--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -4,9 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *
 */
-/*
-$text_yellow: #FBB21C;
-*/
+/* $text_yellow: #FBB21C; */
 /*!
  * Bootstrap v2.2.1
  *
