React first steps

--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -10,7 +10,7 @@
 
   <div class="span8 content" >
     <p>
-      Open source projects are for free!
+      Monitoring open source projects is for free! <br/>
     </p>
     <hr />
     <%= render "pricing" %>
