--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -24,20 +24,56 @@
   <script type="text/jsx">
     /** @jsx React.DOM */
 
-    var data = [
-      {fullname: "Pete Hunt", text: "This is one comment"},
-      {fullname: "Jordan Walke", text: "This is *another* comment"}
-    ];
+    var store = []
 
     var RepoList = React.createClass({
+      loadCommentsFromServer: function() {
+        $.ajax({
+          url: this.props.url,
+          dataType: 'json',
+          success: function(data) {
+            store = data;
+            this.setState({data: data});
+          }.bind(this),
+          error: function(xhr, status, err) {
+            console.error(this.props.url, status, err.toString());
+          }.bind(this)
+        });
+      },
+      getInitialState: function() {
+        return {data: [], text: ''};
+      },
+      componentWillMount: function() {
+        this.loadCommentsFromServer();
+        setInterval(this.loadCommentsFromServer, this.props.pollInterval);
+      },
+      onChange: function( e ) {
+        filtered = [];
+        data = store; // this.state.data
+        for (var key in data) {
+           if (data.hasOwnProperty(key)) {
+              if (data[key]['fullname'].indexOf( e.target.value ) != -1) {
+                filtered[key] = data[key];
+                console.info(data[key]['fullname'])
+              }
+           }
+        }
+        this.setState({data: filtered, text: e.target.value})
+      },
       render: function() {
-        var scm_repos = this.props.data.map(function (repo) {
+        var scm_repos = this.state.data.map(function (repo) {
           return (
             <ScmRepo data={repo} />
           );
         });
         return (
-          <div className="" >
+          <div >
+            <div>
+              <input type="text" id="filter_input" value={this.state.text} onChange={this.onChange} />
+            </div>
+            <div className="scm_meta" >
+              {this.state.data.length} Repositories
+            </div>
             {scm_repos}
           </div>
         );
@@ -55,10 +91,10 @@
     });
 
     React.renderComponent(
-      <RepoList data={data} />,
+      <RepoList url="/user/github_repos" pollInterval={200000} />,
       document.getElementById('content')
     );
-
+    // data={data}
   </script>
 
 <% end %>
