--- a/app/views/products/references.html.erb
+++ b/app/views/products/references.html.erb
@@ -9,27 +9,44 @@
 
 </div>
 
-<% if @product %>
 
-  <div class="span8" >
-    <div class="row content_header_def" >
-      <em> `<%= @product.name %>`</em> has <%= pluralize( @products.total_entries , "reference")  %>
+<% if 1 ==2 %>
+
+  <% if @product %>
+
+    <div class="span8" >
+      <div class="row content_header_def" >
+        <em> `<%= @product.name %>`</em> has <%= pluralize( @products.total_entries , "reference")  %>
+      </div>
+      <div class="content">
+        <%= render :partial => "products/show_search_results",
+                   :locals => { :products => @products, :paginate => true, :prefix => "references", :name_limit => 70 }  %>
+      </div>
     </div>
-    <div class="content">
-      <%= render :partial => "products/show_search_results",
-                 :locals => { :products => @products, :paginate => true, :prefix => "references", :name_limit => 70 }  %>
+
+  <% else %>
+
+    <div class="span8" >
+      <div class="row content_header_def" >
+        No Package selected.
+      </div>
+      <div class="content">
+        There is package selected for this page.
+      </div>
     </div>
-  </div>
+
+  <% end %>
 
 <% else %>
 
   <div class="span8" >
     <div class="row content_header_def" >
-      No Package selected.
+      References
     </div>
     <div class="content">
-      There is package selected for this page.
+      Because of performance issues this feature is currently turned off. We are working on it to turn it on again.
     </div>
   </div>
 
 <% end %>
+
