--- a/app/assets/javascripts/google.js.erb
+++ b/app/assets/javascripts/google.js.erb
@@ -1,18 +1,28 @@
 
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', '<%= Settings.instance.ga_account %>']);
-_gaq.push(['_trackPageview']);
+<%= if Rails.env.production? %>
 
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', '<%= Settings.instance.ga_account %>']);
+  _gaq.push(['_trackPageview']);
 
-function page_view(path){
-  if (_gaq){
-    _gaq.push(['_trackPageview', path]);
-  } else {
-    ga('send', 'pageview', path);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+  function page_view(path){
+    if (_gaq){
+      _gaq.push(['_trackPageview', path]);
+    } else {
+      ga('send', 'pageview', path);
+    }
   }
-}
+
+<% else %>
+
+  function page_view(path){
+    // keep this method to prevent JS errors
+  }
+
+<% end %>
