--- a/app/assets/javascripts/google.js.erb
+++ b/app/assets/javascripts/google.js.erb
@@ -1,5 +1,5 @@
 
-<%= if Rails.env.production? %>
+<% if Rails.env.production? %>
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', '<%= Settings.instance.ga_account %>']);
