--- a/app/views/products/_product_show_maven_code_snippet.html.erb
+++ b/app/views/products/_product_show_maven_code_snippet.html.erb
@@ -3,7 +3,7 @@
 <div class = "well" >
 
   <% if @product.group_id && @product.artifact_id %>
-    <h5 class="dep_header">pom.xml snippet</h5>
+    <h5 class="dep_header">pom.xml snippet for Maven</h5>
     <div class="row" style="margin-bottom: 5px;">
       <div class="span7" style="width: 575px; margin-bottom: 0;">
         <pre class="prettyprint"><code>&lt;dependency&gt;
