--- a/app/views/products/references.html.erb
+++ b/app/views/products/references.html.erb
@@ -10,13 +10,13 @@
 </div>
 
 
-<% if 1 == 2 %>
 
   <% if @product %>
 
     <div class="span8" >
       <div class="row content_header_def" >
-        <em> `<%= @product.name %>`</em> has <%= pluralize( @products.total_entries , "reference")  %>
+        <% count = @products.respond_to?("total_entries") ? @products.total_entries : 0 %>
+        <em> `<%= @product.name %>`</em> has <%= pluralize( count , "reference")  %>
       </div>
       <div class="content">
         <%= render :partial => "products/show_search_results",
@@ -36,17 +36,3 @@
     </div>
 
   <% end %>
-
-<% else %>
-
-  <div class="span8" >
-    <div class="row content_header_def" >
-      References
-    </div>
-    <div class="content">
-      Because of performance issues this feature is currently turned off. We are working on it to turn it on again.
-    </div>
-  </div>
-
-<% end %>
-
