--- a/app/views/products/references.html.erb
+++ b/app/views/products/references.html.erb
@@ -9,30 +9,30 @@
 
 </div>
 
-
-
-  <% if @product %>
-
-    <div class="span8" >
-      <div class="row content_header_def" >
-        <% count = @products.respond_to?("total_entries") ? @products.total_entries : 0 %>
-        <em> `<%= @product.name %>`</em> has <%= pluralize( count , "reference")  %>
-      </div>
-      <div class="content">
-        <%= render :partial => "products/show_search_results",
-                   :locals => { :products => @products, :paginate => true, :prefix => "references", :name_limit => 70 }  %>
-      </div>
+<% if @product %>
+  <% count = ref_count(@product) %>
+  <div class="span8" >
+    <div class="row content_header_def" >
+      <%= link_to @product.name, product_version_path(@product) %> has <%= pluralize( count , "reference")  %>
     </div>
-
-  <% else %>
-
-    <div class="span8" >
-      <div class="row content_header_def" >
-        No Package selected.
-      </div>
-      <div class="content">
-        There is package selected for this page.
-      </div>
+    <div class="content">
+      <p>
+        These <%= pluralize( count , "software package") %> all depend on <%= link_to @product.name, product_version_path(@product) %>
+      </p>
+      <%= render :partial => "products/show_search_results",
+                 :locals => { :products => @products, :paginate => true, :prefix => "references", :name_limit => 70 }  %>
     </div>
+  </div>
 
-  <% end %>
+<% else %>
+
+  <div class="span8" >
+    <div class="row content_header_def" >
+      No Package selected.
+    </div>
+    <div class="content">
+      There is package selected for this page.
+    </div>
+  </div>
+
+<% end %>
