Add Reference Badge

--- a/app/views/products/helpers/_share.html.erb
+++ b/app/views/products/helpers/_share.html.erb
@@ -9,4 +9,5 @@
     <%= render 'shared/share_buttons' %>
   </ul>
   <%= render :partial => "shared/dependency_badge", :locals => { :project => @product } %>
+  <%= render :partial => "shared/ref_badge" %>
 </div>
