--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -81,3 +81,16 @@ h3.side_header{
   padding-top: 20px;
 }
 
+.group_id_small{
+  font-size: 13px;
+  font-style: italic;
+}
+
+.meta_reference{
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.meta_prod_description{
+  font-size: 13px;
+}
