--- a/app/views/language/helpers/_latest.html.erb
+++ b/app/views/language/helpers/_latest.html.erb
@@ -12,7 +12,11 @@
             <%= render partial: "shared/product_follow_mini", locals: {product: prod, user: current_user} %>
           </span>
         </h5>
-        <p> <%= prod.short_summary %> </p>
+        <p>
+          <%= prod.short_summary %> <br/>
+          <span> References: <%= link_to prod.used_by_count, product_references_path( :lang => prod.language_esc, :key => prod.to_param ) %> </span>
+        </p>
+
       </div>
     <% end %>
   <% end %>
