--- a/app/views/services/pricing.html.erb
+++ b/app/views/services/pricing.html.erb
@@ -3,7 +3,7 @@
 <div class = "col2-left col2-right">
   <p style="padding-top: 30px; margin-bottom: 45px; font-size: 18px;">
     VersionEye allows you to monitor your open source projects for free!
-    We only charge a small fee for monitoring project files in private repositories.
+    We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.
     VersionEye has a variety of plans to suit everyone`s needs. <br/>
     <br/>
     <b>All of our plans can be cancelled or changed on a monthly base.</b>
