--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -10,8 +10,9 @@
 
   <div class="span8 content" >
     <p>
-      Open source projects are for free!<br/>
+      Open source projects are for free! We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.<br/>
       <% if current_user.free_private_projects > 0 %>
+        <br/>
         There are <b><%= current_user.free_private_projects %></b> private projects assigned to your account, for free!
       <% end %>
     </p>
