--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,7 +64,7 @@
               </li>
               <li class="divider-vertical"></li>
               <li>
-                <a href="JavaScript: load_dialog_feedback()" title="Feedback" id="feedback">
+                <a href="JavaScript: load_dialog_feedback()" title="Feedback" id="feedback_link">
                   <i class="icon-comment" ></i>
                 </a>
               </li>
