--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -129,7 +129,7 @@
           <div id="dependencies" class="tab-pane active" style="width: 617px;" >
             <div class="pull-right">
               <form action="<%= followall_user_project_path(@project) %>" method="post" style="margin: 0;">
-                <button class="btn btn-success btn-mini">Follow All</button>
+                <button class="btn btn-success btn-mini" title="Follow all software packages in this project and receive notifications independently from this project">Follow All</button>
               </form>
             </div>
             <div>
