--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -19,106 +19,16 @@
 <% else %>
 
   <div class="span8">
-    <div id="content"> . </div>
+    <div class="row content_header_def" >
+      Your GitHub Repositories
+    </div>
+    <div class="span8 content" id="content"> . </div>
   </div>
-  <script type="text/jsx">
-    /** @jsx React.DOM */
-
-    var store = []
-
-    var RepoList = React.createClass({
-      loadReposFromServer: function() {
-        $.ajax({
-          url: this.props.url,
-          dataType: 'json',
-          success: function(data) {
-            something_changed = data.repos.length != store.length || data.task_status != this.state.task_status
-            if (something_changed){
-              store = data.repos;
-              this.setState(
-                {data: data.repos,
-                 list_size: data.repos.length,
-                 task_status: data.task_status});
-            }
-          }.bind(this),
-          error: function(xhr, status, err) {
-            console.error(this.props.url, status, err.toString());
-          }.bind(this)
-        });
-      },
-      getInitialState: function() {
-        return {data: [], text: '', list_size: 0, task_status: ''};
-      },
-      componentWillMount: function() {
-        this.loadReposFromServer();
-        setInterval(this.loadReposFromServer, this.props.pollInterval);
-      },
-      onChange: function( e ) {
-        filtered = [];
-        data = store; // this.state.data
-        count = 0;
-        for (var key in data) {
-           if (data.hasOwnProperty(key)) {
-              if (data[key]['fullname'].indexOf( e.target.value ) != -1) {
-                filtered[key] = data[key];
-                console.info(data[key]['fullname'])
-                count += 1;
-              }
-           }
-        }
-        this.setState({data: filtered, list_size: count, text: e.target.value})
-      },
-      render: function() {
-        var clear_link = "/user/" + this.props.scm + "/clear";
-        var scm_repos = this.state.data.map(function (repo) {
-          return (
-            <ScmRepo data={repo} />
-          );
-        });
-        return (
-          <div >
-            <div>
-              <input type="text" id="filter_input" value={this.state.text} onChange={this.onChange} />
-            </div>
-            <div className="scm_meta" >
-              {this.state.list_size} Repositories - <a href={clear_link}>Reimport all Repositories</a>
-            </div>
-            <TaskStatusMessage data={this.state.task_status} />
-            {scm_repos}
-          </div>
-        );
-      }
-    });
-
-    var ScmRepo = React.createClass({
-      render: function() {
-        return (
-          <div className="scm_repo" >
-            {this.props.data.fullname}
-          </div>
-        );
-      }
-    });
-
-    var TaskStatusMessage = React.createClass({
-      render: function() {
-        if (this.props.data == 'running'){
-          return (
-            <div><img src="/assets/progress.gif" alt="work in progress" /> Import is running ... be patient and drink a soda.</div>
-          );
-        } else {
-          return (
-            <div>We importet everything we could find.</div>
-          );
-        }
-      }
-    });
-
+  <script type="text/javascript">
     React.renderComponent(
-      <RepoList url="/user/github_repos" scm="github" pollInterval={7000} />,
+      RepoList({url: "/user/github_repos", scm: "github", pollInterval: 3000}),
       document.getElementById('content')
     );
-    // data={data}
   </script>
 
 <% end %>
