--- a/app/views/user/github_repos/init.html.erb
+++ b/app/views/user/github_repos/init.html.erb
@@ -22,6 +22,21 @@
     <div class="row content_header_def" >
       Your GitHub Repositories
     </div>
+
+    <% if !current_user.github_scope.to_s.split(", ").include?("repo") %>
+      <div class="span8 content flash warning" >
+         With the current scope VersionEye can only fetch your public repositories.
+         If you want VersionEye to monitor your private repositories, you need to grant VersionEye access:<br/><br/>
+         <a href='<%= Settings.instance.github_base_url %>/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd&amp;scope=repo,user:email' style="margin-right: 5px;" >
+           Grant access to private repositories
+         </a><br/><br/>
+         Unfortunately, GitHub doesn't have a read-only scope for private repositories currently.
+         But we promise you that we don't have any git write operations in our code base and we only
+         do a lookup for supported project files.
+         <br/>
+      </div>
+    <% end %>
+
     <div class="span8 content" id="content"> . </div>
   </div>
   <script type="text/javascript">
