--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 	<div class="span3 pull-right" >
-		<div style = "text-align: right;" >
+		<div class="pull-right" >
 			<% if @user.location && !@user.location.empty? %>
 				<div id="map_for_user_profile" class="map_for_user_profile round" ></div>
 			<% end %>
