--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -5,7 +5,7 @@
     <a href="/pricing">Pricing</a> |
     <a href="/faq">FAQs</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
-    <a href="JavaScript: load_dialog_feedback()">Feedback</a> |
+    <a href="JavaScript: load_dialog_feedback()" id="feedback">Feedback</a> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> |
     <a href="/api" >API</a>
   </div>
