--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -21,10 +21,7 @@
     <% if has_current_plan?( current_user ) %>
       <p>
         <br/>
-        <form action="/settings/update_plan" method="POST" >
-          <input  type="hidden" name="plan" value="<%= current_user.plan.name_id %>" />
-          <button type="submit" class="btn btn-primary" id="update_cc_button" >Update Credit Card</button>
-        </form>
+        <a href="/settings/creditcard">Update Credit Card</a>
       </p>
     <% end %>
   </div>
