--- a/app/views/admin/submitted_urls/_approval_form.html.erb
+++ b/app/views/admin/submitted_urls/_approval_form.html.erb
@@ -39,7 +39,7 @@
         <button type = "button" class = "btn"
           onclick="jQuery('.admin-form').addClass('hide')">
           Cancel</button>
-       <%= submit_tag "Accept", :class => "btn2" %>
+       <%= submit_tag "Accept", :class => "btn btn-success" %>
       </div>
     </div>
   <% end %>
