--- a/app/views/products/_extended_search.html.erb
+++ b/app/views/products/_extended_search.html.erb
@@ -40,7 +40,7 @@
 
 			<div class="control-group" style = "height: 30px; padding: 10px 0px 20px 0;">
 				<div >
-					<button type="submit" class="btn2 btn-medium" >Search</button>
+					<button type="submit" class="btn btn-primary" >Search</button>
 				</div>
 			</div>
 
