--- a/app/views/shared/_new_url_form.html.erb
+++ b/app/views/shared/_new_url_form.html.erb
@@ -24,7 +24,7 @@
 
     <div class= "control-group">
       <div class= "controls">
-        <button type= "submit" class = "btn2 btn-large"> Submit</button>
+        <button type= "submit" class = "btn btn-large btn-primary"> Submit</button>
       </div>
     </div>
 
