--- a/app/views/shared/_product_follow.html.erb
+++ b/app/views/shared/_product_follow.html.erb
@@ -1,22 +1,23 @@
  <% if signed_in? %>
-  <div class = "pull-right" id="follow_<%= product.to_param %>" style="display: <%= display_follow(product, user) %>">
-    <%= form_tag('/package/follow', :remote => true) do  %>
+  <% user = current_user %>
+  <div class = "pull-right" id="follow_<%=product.language_esc %>_<%=product.to_param%>" style="display: <%= display_follow(product, user) %>">
+    <%= form_tag("/package/follow", :remote => true) do  %>
       <input  name="product_key"  type="hidden" value="<%= product.to_param %>" />
       <input  name="product_lang" type="hidden" value="<%= product.language %>"/>
-      <button type="submit" class="btn btn-success btn-medium" >Follow</button>
+      <button id="button_<%= product.language_esc %>_<%= product.prod_key %>" type="submit" class="btn btn-success btn-medium" >Follow</button>
     <% end %>
   </div>
 
-  <div class = "pull-right" id="unfollow_<%= product.to_param %>" style="display: <%= display_unfollow(product, user) %>">
+  <div class = "pull-right" id="unfollow_<%=product.language_esc %>_<%=product.to_param%>" style="display: <%= display_unfollow(product, user) %>">
     <%= form_tag("/package/unfollow", :remote => true) do  %>
       <input  name="product_key"  type="hidden" value="<%= product.to_param %>" />
       <input  name="product_lang" type="hidden" value="<%= product.language %>"/>
-      <button type="submit" class="btn2 btn-big" >Unfollow</button>
+      <button type="submit" class="btn btn-warning" >Unfollow</button>
     <% end %>
   </div>
 
 <% else %>
 
-  <button id="button_<%= product.prod_key %>" type="submit" class="btn btn-success btn-medium" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" >Follow</button>
+  <button id="button_<%= product.language_esc %>_<%= product.prod_key %>" type="submit" class="btn btn-success btn-medium" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" >Follow</button>
 
 <% end %>
