--- a/app/views/shared/_version_comment_replies.html.erb
+++ b/app/views/shared/_version_comment_replies.html.erb
@@ -36,7 +36,7 @@
 			</div>
 			<div style="display: inline-block; width: 495px;">
 				<div style="float: left">
-					<button type="submit" class="btn2 btn2-large">Save</button>
+					<button type="submit" class="btn btn-primary">Save</button>
 				</div>
 				<div style="float: right" class="meta-text-small">
 					Characters left: <span id="<%= comment.id %>_reply_counter">250</span>
