--- a/app/views/users/updatepassword.html.erb
+++ b/app/views/users/updatepassword.html.erb
@@ -1,7 +1,7 @@
 <% title 'Saving new password' %>
 
 <%= form_tag('/updatepassword', class: 'form-horizontal') do %>
-    <div class="control-group">      
+    <div class="control-group">
       <div class="controls">
         Please type your password twice.<br/>
         <%= hidden_field_tag :verification, @verification %>
@@ -25,7 +25,7 @@
     <div class="control-group">
       <div class="control-label"></div>
       <div class="controls">
-        <button type="submit" class="btn2 btn2-big" >Save</button>
+        <button type="submit" class="btn btn-big btn-primary" >Save</button>
       </div>
     </div>
 <% end %>
