--- a/app/views/user/projects/helpers/_create_from_upload.html.erb
+++ b/app/views/user/projects/helpers/_create_from_upload.html.erb
@@ -11,17 +11,7 @@
 <%= form_for [:user, @project], :html => {:multipart => true, :accept => "text/xml" } do |f|  %>
 <div class="tabbable">
 
-<div >
-  <div class = "fileupload fileupload-new" data-provides="fileupload">
-    <span class = "btn btn-file">
-      <span class = "fileupload-new"> Select project file </span>
-      <span class = "fileupload-exists"> Change file </span>
-      <%= file_field 'upload', 'datafile', :class => "" %>
-    </span>
-    <span class = "fileupload-preview"></span>
-    <a href="#" class="close fileupload-exists" data-dismiss="fileupload" style="float: none">×</a>
-  </div>
-</div>
+<%= render '/user/helpers/stylish_fileupload' %>
 
 <div class="pull-left" style="padding-top: 10px;">
   <button type="submit" class="btn btn-primary btn-large ">Create</button>
